<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/jcBackgroundColor"
    tools:context=".filters.ui.SelectPlaceFragment">

    <!-- Нужно будет использовать Toolbar, это упрощает код -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/place_filter_sign" />

    <Button
        android:id="@+id/btn_select_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/country_but_sign" />

    <Button
        android:id="@+id/btn_select_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/region_but_sign" />

</LinearLayout>
