<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filters.ui.SelectRegionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_micro"
            android:clickable="true"
            android:src="@drawable/ic_back_arrow"
            app:tint="?attr/jcMainTextColor"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/tv_fragment_title"
            style="@style/Medium_22_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_micro"
            android:layout_marginStart="@dimen/margin_micro"
            android:text="@string/select_industry"
            android:textColor="?attr/jcMainTextColor"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_standard"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_search"
            style="@style/EditText_Style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_field_height"
            android:hint="@string/enter_industry"
            android:importantForAutofill="no"/>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_medium"
            tools:ignore="contentDescription"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_error"
                android:layout_width="328dp"
                android:layout_height="223dp"
                android:src="@drawable/er_failed_to_get_list"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                tools:ignore="contentDescription"/>

            <TextView
                android:id="@+id/tv_error"
                style="@style/Medium_22_Style"
                android:textColor="?attr/jcMainTextColor"
                android:text="@string/failed_to_get_list"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="46dp"
                android:layout_marginTop="@dimen/margin_standard"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_standard"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_standard"
            tools:listitem="@layout/industry_list_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="visible"/>
    </FrameLayout>

    <TextView
        style="@style/Medium_16_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_button"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        android:id="@+id/select_btn"/>

</LinearLayout>
